# graphics-demos

./: .cproject  .gitignore  .gitmodules  .project  CMakeList.txt  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  delete.txt  main.cpp  main_multi.cpp  main_old.cpp  main_single.cpp  makeGif.sh  wave.c  xmake.lua
blank/: CMakeLists.txt
blank/src/: main.cpp
camo-gen/: CMakeLists.txt  README.md
camo-gen/camogen/: Cargo.toml
camo-gen/camogen/camogen/: Cargo.toml
camo-gen/camogen/camogen/src/: lib.rs  texture.rs
camo-gen/camogen/demo/: Cargo.toml
camo-gen/camogen/demo/src/: main.rs
camo-gen/camogen/src/: main.rs
camo-gen/camogen/wasm/: Cargo.toml
camo-gen/include/GL/: gl3w.h  glcorearb.h
camo-gen/src/: Image.h  gl3w.c  main.cpp  shader_util.cpp  shader_util.h  texture.cpp  texture.h
examples/: alg_linear_result_47_itr.ppm  alg_linear_result_48_itr.ppm  alg_linear_result_49_itr.ppm  alg_linear_result_50_itr.ppm
include/GL/: gl3w.h  glcorearb.h
raytracing-screensaver/: CMakeLists.txt  README.md  fragTest.cpp  main_multi.cpp
raytracing-screensaver/src/: glad.c  main_single.cpp
scene_with_camera/: .tags_sorted_by_file  build.bat  xmake.lua
scene_with_camera/assets/: basic.frag  basic.geom  basic.vert
scene_with_camera/include/glad/: glad.h
scene_with_camera/src/: cube.h  glad.c  scene_with_camera.cpp  shader.cpp  shader.h
sdl-rust-vs-c/: sdl2_in_c.c  sdl2_in_rust.rs
shadertoy_2/: README.md  hexes.frag  main.cpp  sun.frag  winbuild.bat
shadertoy_to_screensaver/: README.md  main.cpp  winbuild.bat
sierpinski-gasket/: CMakeLists.txt
src/: AbstractDemo.hpp  fragTest.cpp  frag_shader.frag  gl3w.c  main.cpp  raytracing_frag_shader_many_spheres.cpp  raytracing_frag_shader_one_sphere.cpp  shader_util.cpp  shader_util.h  shader_vertex.glsl  texturing_tri_demo.cpp
src/glad/include/glad/: glad.h
src/glad/src/: glad.c
texturing-test/: CMakeLists.txt  build.bat  main.cpp  shader.cpp  shader.h
texturing-test/assets/: frag.glsl  vert.glsl
texturing-test/src/: main.cpp
utils/: CMakeLists.txt
utils/include/: shader.h
utils/include/glad/: glad.h
utils/src/: shader.cpp
vs-proj/: ray-tracing-screensaver.sln  vs-proj.sln
vs-proj/ray-tracing-screensaver/: ray-tracing-screensaver.vcxproj
vs-proj/vs-proj/: vs-proj.vcxproj
