[package]
name = "camogen-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
camogen = { version = "0.1.0", path = "../camogen" }
structopt = "0.3"
rand = "0.8"
image = "0.24.5"
pix-engine = "0.6.0"

[package.metadata.vcpkg]
dependencies = ["sdl2", "sdl2-image[libjpeg-turbo,tiff,libwebp]", "sdl2-ttf", "sdl2-gfx", "sdl2-mixer"]
git = "https://github.com/microsoft/vcpkg"
rev = "261c458af6e3eed5d099144aff95d2b5035f656b"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }
